Fix ConditionDAO:Attribute.ID field name, and compilation error in MySQLConditionDAO